--- a/datashop/templates/store/layouts/index.html
+++ b/datashop/templates/store/layouts/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="airtime-body">
+<div class="container">
     <div class="jumbotron header">
         <h1 class="display-4">Welcome to GhDataShop</h1>
         <p class="lead">Leading Airtime and Momo Service Provider.</p>
