--- a/datashop/templates/store/layouts/voda.html
+++ b/datashop/templates/store/layouts/voda.html
@@ -9,8 +9,9 @@
         <p class="lead">Leading Airtime and Momo Service Provider.</p>
         <hr class="my-4">
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Airtime</a>
-          <a class="btn btn-primary btn-lg" href="#" role="button">Mobile Money</a>
+            <a class="btn btn-outline-primary btn-lg" href="{% url 'mtn_airtime' %}" role="button">MTN</a>
+            <a class="btn btn-outline-primary btn-lg" href="{% url 'tigo_airtime' %}" role="button">AirtelTigo</a>
+            <a class="btn btn-primary btn-lg" href="{% url 'voda_airtime' %}" role="button">Vodafone</a>
         </p>
     </div>
     
