--- a/datashop/templates/store/layouts/mtn.html
+++ b/datashop/templates/store/layouts/mtn.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="jumbotron header">
+    {% comment %} <div class="jumbotron header">
         <h1 class="display-4">Welcome to GhDataShop</h1>
         <p class="lead">Leading Airtime and Momo Service Provider.</p>
         <hr class="my-4">
@@ -13,7 +13,7 @@
           <a class="btn btn-outline-primary btn-lg" href="{% url 'tigo_airtime' %}" role="button">AirtelTigo</a>
           <a class="btn btn-outline-primary btn-lg" href="{% url 'voda_airtime' %}" role="button">Vodafone</a>
         </p>
-    </div>
+    </div> {% endcomment %}
     
     {% bootstrap_messages %}
     <form method="POST" action="">
