animated thank you page

--- a/datashop/templates/store/base.html
+++ b/datashop/templates/store/base.html
@@ -13,5 +13,7 @@
     {% block content %}
     
     {% endblock content %}
+
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
 </html>
