--- a/datashop/templates/bundle_table.html
+++ b/datashop/templates/bundle_table.html
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-    <table class="table table-responsive table-striped">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Phone Number</th>
