--- a/datashop/templates/ishare_table.html
+++ b/datashop/templates/ishare_table.html
@@ -10,6 +10,7 @@
       </div>
     </div>
 
+    <div class="table-responsive">
     <table class="table table-striped">
         <thead>
             <tr>
@@ -36,5 +37,6 @@
             {% endfor %}
         </tbody>
     </table>
+    </div>
 
 {% endblock content %}
