--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,14 @@
 body{
-    padding: 20px 60px;
+    padding: 20px 20px;
+}
+
+.my-container{
+  background-color: #607D8BFF;
+  padding: 20px;
+  margin: 0;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header{
