--- a/datashop/templates/history_table.html
+++ b/datashop/templates/history_table.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
+      <div class="my-container">
         <h1 class="display-4">{{ heading }}</h1>
         <p class="lead">These are all your {{ heading|lower }}.</p>
       </div>
