--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,9 +4,9 @@ body{
 
 .jumbotron{
   background-color: #607D8BFF;
-  padding: 20px;
-  margin: 0;
-  width: 90%;
+  padding: 40px 20px;
+  margin-bottom: 30px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
