changes to history

--- a/datashop/templates/history_table.html
+++ b/datashop/templates/history_table.html
@@ -6,7 +6,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h3 style="color: white;" class="font-weight-bold">{{ heading }}</h1>
-        <p style="color: white;" class="lead font-weight-bold">These are all your {{ heading|lower }}.</p>
+        <p style="color: white;" class="lead font-weight-normal">These are all your {{ heading|lower }}.</p>
       </div>
     </div>
 
