--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,10 +16,10 @@ body{
   margin-left: 0;
 }
 
-.table-striped>tbody>tr:nth-child(odd)>td, 
+/* .table-striped>tbody>tr:nth-child(odd)>td, 
 .table-striped>tbody>tr:nth-child(odd)>th {
    background-color: #607D8BFF; 
- }
+ } */
 
 .header{
     background-image: linear-gradient(to bottom right, #B469FF, #E85BFF);
