--- a/datashop/templates/bundle_table.html
+++ b/datashop/templates/bundle_table.html
@@ -5,8 +5,8 @@
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">{{ heading }}</h1>
-        <p class="lead">These are all your {{ heading|lower }}.</p>
+        <h3 style="color: white;" class="font-weight-bold">{{ heading }}</h1>
+            <p style="color: white;" class="lead font-weight-normal">These are all your {{ heading|lower }}.</p>
       </div>
     </div>
 
